gosu-test/src/test/gosu/gw/lang/spec_old/expressions/Errant_ReadAccessToWriteOnlyPropertyFailsWithParseException.gs
package gw.lang.spec_old.expressions

uses gw.testharness.DoNotVerifyResource

@DoNotVerifyResource
class Errant_ReadAccessToWriteOnlyPropertyFailsWithParseException {

  function test() {
    var x = new HasWriteOnlyProperty()
    print( x.WriteOnly ) // error
  }

}
